--- a/src/main/resources/templates/geo.html
+++ b/src/main/resources/templates/geo.html
@@ -122,7 +122,7 @@ function initialize() {
 $(function() {
 	
 	 $.getJSON('http://localhost:8080/json/chart/amne/activity/84887/speed/', function(data) {
-	    	$('#containerChartVitesse').highcharts(data);
+	    	$('#containerChartSpeed').highcharts(data);
 	    });
 	 
 
@@ -130,9 +130,10 @@ $(function() {
 	$('#myTab a').click(function (e) {
 	    	  e.preventDefault();
 	    	  $(this).tab('show');
-	    		 $.getJSON('http://localhost:8080/json/chart/amne/activity/84887/bpm/', function(data) {
-	    		    	$('#containerChartBpm').highcharts(data);
-	    		    });
+	    	  var strTab = this.hash.replace('#','');
+	    	  $.getJSON('http://localhost:8080/json/chart/amne/activity/84887/'+strTab.toLowerCase()+'/', function(data) {
+	    		   $('#containerChart'+strTab).highcharts(data);
+	    		  });
 	    	  
 	    	});
 		    
@@ -155,15 +156,19 @@ google.maps.event.addDomListener(window, 'load', initialize);
 		<tr>
 			<td>
 				<ul class="nav nav-tabs" role="tablist" id="myTab">
-				  <li class="active"><a href="#home" role="tab" data-toggle="tab">Vitesse Km/h</a></li>
-				  <li><a href="#profile" role="tab" data-toggle="tab">Fréquence Cardiaque</a></li>
+				  <li class="active"><a href="#Speed" role="tab" data-toggle="tab">Vitesse Km/h</a></li>
+				  <li><a href="#Bpm" role="tab" data-toggle="tab">Fréquence Cardiaque</a></li>
+				   <li><a href="#Altitude" role="tab" data-toggle="tab">Altitude</a></li>
 				</ul>				
 				<div class="tab-content">
-				  <div class="tab-pane active" id="home">
-				  	<div id="containerChartVitesse" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+				  <div class="tab-pane active" id="Speed">
+				  	<div id="containerChartSpeed" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
 				  </div>
-				  <div class="tab-pane" id="profile">
+				  <div class="tab-pane" id="Bpm">
 				  	<div id="containerChartBpm" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+				  </div>
+				  <div class="tab-pane" id="Altitude">
+				  	<div id="containerChartAltitude" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
 				  </div>
 				</div>				
 			</td>
